--- a/terraform/inventori.ini
+++ b/terraform/inventori.ini
@@ -3,4 +3,6 @@
 
 [all:vars]
 ansible_user=ubuntu
-ansible_ssh_private_key_file=~/.ssh/id_ed25519
+ansible_ssh_private_key_file=/home/duna/.ssh/id_ed25519
+ansible_ssh_common_args=-o StrictHostKeyChecking=no -o UserKnownHostsFile=/dev/null
+ansible_password=
